# sample-python-project

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: build.yaml
greeting/: __init__.py  complex.py  simple.py
tests/: conftest.py  test_complex.py  test_simple.py
